--- a/vistas/dreamleague.html
+++ b/vistas/dreamleague.html
@@ -655,7 +655,7 @@
                                 <span>App Store</span>
                             </div>
                         </a>
-                        <a href="#" class="btn-store" target="_blank" rel="noopener">
+                        <a href="https://play.google.com/store/apps/details?id=com.dreamleague" class="btn-store" target="_blank" rel="noopener">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"/>
                             </svg>
@@ -855,20 +855,6 @@
                     <li><strong>Plan Gratis:</strong> 0€/mes - Acceso completo a LaLiga, ligas privadas y sistema de apuestas básico</li>
                     <li><strong>Suscripción Premium:</strong> 9,90€/mes - Acceso a LaLiga Hypermotion, Premier League y estadísticas avanzadas de todos los jugadores</li>
                 </ul>
-                <p style="margin-top: var(--space-6);">
-                    Al suscribirte, aceptas nuestros <a href="dreamleague-terminos.html">Términos de Uso</a> y nuestra <a href="dreamleague-privacidad.html">Política de Privacidad</a>.
-                </p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Legal Links Section -->
-    <section class="app-legal">
-        <div class="container">
-            <div class="legal-links">
-                <a href="dreamleague-privacidad.html" class="legal-link">Política de Privacidad</a>
-                <a href="dreamleague-terminos.html" class="legal-link">Términos de Uso (EULA)</a>
-                <a href="mailto:bluedebug.contact@gmail.com" class="legal-link">Soporte: bluedebug.contact@gmail.com</a>
             </div>
         </div>
     </section>
